@@ -7,6 +7,7 @@ import com.sparta.oishitable.domain.customer.coupon.entity.UserCoupon;
 import com.sparta.oishitable.domain.customer.coupon.repository.UserCouponRepository;
 import com.sparta.oishitable.domain.owner.coupon.dto.request.CouponResponse;
 import com.sparta.oishitable.domain.owner.coupon.entity.Coupon;
+import com.sparta.oishitable.domain.owner.coupon.entity.CouponType;
 import com.sparta.oishitable.domain.owner.coupon.repository.CouponRepository;
 import com.sparta.oishitable.global.exception.CustomRuntimeException;
 import com.sparta.oishitable.global.exception.NotFoundException;
@@ -16,9 +17,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class UserCouponService {
 
@@ -30,10 +31,25 @@ public class UserCouponService {
         List<Coupon> coupons = couponRepository.findByRestaurantId(restaurantId);
 
         return coupons.stream()
+                .filter(coupon -> {
+                    if (coupon.getType() == CouponType.FIRST_COME) {
+                        Integer maxCount = coupon.getFirstComeCouponMaxCount();
+
+                        if (maxCount == null) {
+                            maxCount = 0;
+                        }
+
+                        // 선착순 이벤트가 끝난 쿠폰은 유저가 조회하면 안된다.
+                        long downloadedCount = userCouponRepository.countByCouponIdAndCouponUsedFalse(coupon.getId());
+                        return downloadedCount < maxCount;
+                    }
+                    return true;
+                })
                 .map(CouponResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional
     public void downloadCoupon(Long userId, Long couponId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND));
@@ -46,14 +62,25 @@ public class UserCouponService {
             throw new CustomRuntimeException(ErrorCode.COUPON_ALREADY_DOWNLOAD);
         }
 
+
         UserCoupon userCoupon = UserCoupon.builder()
                 .couponUsed(false)
                 .user(user)
                 .coupon(coupon)
                 .build();
 
+        if (coupon.getType() == CouponType.FIRST_COME) {
+            long downloadedCount = userCouponRepository.countByCouponId(couponId);
+
+            // 다운로드 한도 초과 여부 체크
+            if (downloadedCount >= coupon.getFirstComeCouponMaxCount()) {
+                userCoupon.setCouponUsed(true);
+                throw new CustomRuntimeException(ErrorCode.COUPON_LIMIT_EXCEEDED);
+            }
+        }
+
         userCouponRepository.save(userCoupon);
-        
+
     }
 
     public List<UserCouponResponse> findUserCoupons(Long userId, Long cursor, int size) {
@@ -62,7 +89,7 @@ public class UserCouponService {
 
         return userCoupons.stream()
                 .map(UserCouponResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -75,5 +102,6 @@ public class UserCouponService {
         }
 
         userCoupon.setCouponUsed(true);
+
     }
 }
